# fastapi-chat-api

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: __init__.py  dependencies.py  routers.py
src/core/: config.py  database.py  logger.py
src/migrations/: env.py
src/migrations/versions/: d3cbd5f865b2_create_chat_and_message_tables.py
src/models/: chat.py  message.py
src/repo/: chat.py  message.py
src/schemas/: __init__.py  chat.py  message.py
src/service/: __init__.py  chat.py  message.py
tests/: conftest.py  test_chats.py  test_messages.py
